# Vocalize-bot

./: .env.template  LICENSE  README.md  __main__.py  main.py  pyproject.toml
cogs/: tts.py
core/: core.py
